--- a/_frameworks/neural-networks.html
+++ b/_frameworks/neural-networks.html
@@ -2,6 +2,7 @@
 layout: crates
 title: Neural Networks
 crate_tag: neural-networks
+color: yellow
 ---
 
 TODO: summarize the state of neural networks in the Rust ML ecosystem
