--- a/irc.html
+++ b/irc.html
@@ -1,5 +1,8 @@
 ---
 layout: default
+title: Chat
+navindex: 0
+permalink: /irc/
 ---
 
 <iframe src="https://kiwiirc.com/client/irc.mozilla.org:6697/#rust-machine-learning" style="border:0; width: 100%; height:90vh"></iframe>
