--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 layout: default
 ---
 
+<a class="github-fork-ribbon left-top" href="https://github.com/anowell/are-we-learning-yet" title="Contribute on GitHub">Contribute on GitHub</a>
+
 <div>
   <div class="hero">
     <div class="container">
