Update index copy

--- a/index.html
+++ b/index.html
@@ -27,12 +27,13 @@ layout: default
     <p>
       Rust's performance, low-level control, and zero-cost high-level abstractions make it a compelling
       alternative to more established ecosystems for Machine Learning.
-      While the Rust ML ecosystem is still young, several ambitious projects and a variety of building blocks have emerged.
-      At the same time, there remain plenty of opportunities to fill in the gaps with new tools.
+      The Rust ML ecosystem is still young, however several ambitious projects and a variety of building blocks have emerged
+      and using <a href="http://rustconf.com/program.html">Rust to solve a real-world machine learning problem</a>
+      even made the cut for RustConf 2016.
     </p>
     <p>
-      TODO: Highlight a few major projects, i.e. rusty-machine, mention the well-received Leaf is in need of maintainers,
-      and maybe call out a couple other tools.
+      Still, much of the Rust ML ecoystem is best described as experimental.
+      So there are plenty of opportunities for new projects to fill in the gaps.
     </p>
     <p>
       For help or questions with Rust ML, reach out on <a href="irc.html">#rust-machine-learning</a>.
