Stub out additional resources section

--- a/index.html
+++ b/index.html
@@ -61,4 +61,20 @@ layout: default
     </div>
   </div>
 
+
+  <div class="container" style="padding: 60px 0 40px;">
+    <h3>Additional resources</h3>
+    <p>See also some of these talks, tutorials, demos about machine learning in Rust</p>
+
+    <ul>
+      <li>
+        <a href="">Learning Machines</a> -
+        Interactive tutorials on machine learning powered by rusty-machine.
+      <li>
+        <a href="https://medium.com/@autumn_eng/about-rust-s-machine-learning-community-4cda5ec8a790#.al23u6w5s">About Rust's ML Community</a> -
+        An assesment of Rust ML from Jan 2016
+      </li>
+      <li>TODO: find more stuff</li>
+    </ul>
+  </div>
 </div>
