variety of minor edits

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@ layout: default
 
   <div class="container" style="padding: 60px 0 40px;">
     <div class="tldr-headline">
-        You can accomplish a lot,<br>
-        but the ecosystem isn't mature yet.
+        Its ripe for experimentation,<br>
+        but the ecosystem isn't very complete yet.
     </div>
 
     <p>
