cleanup a bunch of styles

--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@ layout: default
 <div>
   <div class="hero">
     <div class="container">
-      <img src="/images/rust-9000.png" style="float:right;width:300px;">
+      <img src="/images/rust-9000.png" style="float:right;width:250px;">
       <h1 style="padding-top: 40px;">Are we <strong>learning</strong> yet?</h1>
       <p style="margin-top: 60px; position: relative;">
         <span style="position: absolute; left: 120px; top: -25px; color: #b33">A work-in-progress to catalog</span>
-        <span style="text-decoration: line-through;">The comprehensive guide to</span> <b style="color: #b33;">^</b>
+        <span style="text-decoration: line-through;">The comprehensive guide to</span> <span style="color: #b33;">^</span>
         <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
         the state of <b style="color: #f4f846">machine learning in Rust</b>
       </p>
