--- a/irc.html
+++ b/irc.html
@@ -1,8 +1,28 @@
 ---
-layout: default
 title: Chat
 navindex: 0
 permalink: /irc/
 ---
 
-<iframe src="https://kiwiirc.com/client/irc.mozilla.org:6697/#rust-machine-learning" style="border:0; width: 100%; height:90vh"></iframe>
+<!DOCTYPE html>
+<html>
+
+  {% include head.html %}
+
+  <body class="body">
+
+    {% include header.html %}
+
+    <div class="page-content" style="display:flex;">
+        <div style="position: relative; flex: 1; display: flex; flex-grow: 1;">
+            <div style="position:absolute; z-index: -1; top: 80px; width:100%; text-align:center;">
+                Loading IRC widget for:<br><br><b>#rust-machine-learning</b> on <b>irc.mozilla.org</b>.
+            </div>
+            <iframe src="https://kiwiirc.com/client/irc.mozilla.org:6697/#rust-machine-learning" style="border:0; width: 100%;"></iframe>
+        </div>
+    </div>
+  </body>
+
+</html>
+
+
