--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ layout: default
 
   <div class="container" style="padding: 60px 0 40px;">
     <div class="tldr-headline">
-        Its ripe for experimentation,<br>
+        It's ripe for experimentation,<br>
         but the ecosystem isn't very complete yet.
     </div>
 
