Fix link to learning machines

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ layout: default
 
     <ul>
       <li>
-        <a href="">Learning Machines</a> -
+        <a href="http://learning-machines.herokuapp.com/">Learning Machines</a> -
         Interactive tutorials on machine learning powered by rusty-machine.
       <li>
         <a href="https://medium.com/@autumn_eng/about-rust-s-machine-learning-community-4cda5ec8a790#.al23u6w5s">About Rust's ML Community</a> -
