Generate richer crate data

--- a/index.html
+++ b/index.html
@@ -41,7 +41,8 @@ skip_tiles: [3,4,6,7]
     </p>
     <p>
       Still, much of the Rust ML ecoystem is best described as experimental.
-      So there are plenty of opportunities for new projects to fill in the gaps.
+      So there are plenty of opportunities for contributors to fill in the gaps
+      by helping out existing projects or starting new ones.
     </p>
     <p>
       For help or questions with Rust ML, reach out on <a href="irc.html">#rust-machine-learning</a>.
