--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@ skip_tiles: [3,4,6,7]
       by helping out existing projects or starting new ones.
     </p>
     <p>
-      For help or questions with Rust ML, reach out on <a href="irc.html">#rust-machine-learning</a>.
+      For help or questions with Rust ML, reach out on <a href="/irc/">#rust-machine-learning</a>.
     </p>
   </div>
 
