Add 'Ham or Spam?' tutorial (fix #2)

--- a/index.html
+++ b/index.html
@@ -77,6 +77,10 @@ skip_tiles: [3,4,6,7]
 
     <ul>
       <li>
+        <a href="https://github.com/rust-community/rustbridge/tree/master/workshops/machine_learning">Spam or Ham?</a> -
+        End-to-end Rust ML tutorial aimed at Rust beginners (uses rustlearn)
+      </li>
+      <li>
         <a href="http://learning-machines.herokuapp.com/">Learning Machines</a> -
         Interactive tutorials on machine learning powered by rusty-machine.
       <li>
