Lots of style cleanup

--- a/index.html
+++ b/index.html
@@ -8,17 +8,18 @@ skip_tiles: [3,4,8]
 
 <div>
   <div class="hero">
-    <div class="container">
+    <div class="color-overlay"></div>
+    <div class="container" style="position:relative; max-width: 60rem;">
       <div class="row">
         <div class="col-xs-12 col-sm-3 col-md-4 last-sm last-md" style="text-align: center;">
-          <img src="/images/rust-9000.png" style="width:250px; margin-top: 40px;">
+          <img src="/images/rust-9000.png" style="width:300px; margin-top: 20px;">
         </div>
         <div class="col-xs-12 col-sm-9 col-md-8">
           <h1>Are we <strong>learning</strong> yet?</h1>
           <p style="margin-top: 60px; position: relative;">
             <span>A work-in-progress to catalog</span>
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            the state of <b style="color: #f4f846">machine learning in Rust</b>
+            the state of <b style="color: #b7410e">machine learning in Rust</b>
           </p>
         </div>
       </div>
@@ -49,8 +50,9 @@ skip_tiles: [3,4,8]
     </p>
   </div>
 
-  <div class="hero">
-    <div class="container">
+  <div class="hero" style="background-position: center 70%;">
+    <div class="color-overlay"></div>
+    <div class="container" style="position:relative;">
 
       <h3>Rust Machine Learning Ecosystem</h3>
       <div class="row tiles">
