Update link to RustConf 2016 talk

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ skip_tiles: [3,4,8]
       alternative to more established ecosystems for Machine Learning.
       While the Rust ML ecosystem is still young and best described as experimental,
       several ambitious projects and building blocks have emerged.
-      Using <a href="http://rustconf.com/program.html">Rust to solve a real-world machine learning problem</a>
+      Using <a href="https://www.youtube.com/watch?v=lY10kTcM8ek">Rust to solve a real-world machine learning problem</a>
       even made the cut for RustConf 2016.
     </p>
     <p>
