Add Discord's channel

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@ skip_tiles: [3,9]
       by helping out existing projects or starting new ones.
     </p>
     <p>
-      For help or questions with Rust ML, reach out on <a href="/irc/">#rust-machine-learning</a>.
+    For help or questions with Rust ML, reach out on <a href='https://discordapp.com/channels/273534239310479360/533004930349531136'>#science-and-ai</a> (Discord) or <a href="/irc/">#rust-machine-learning</a> (IRC).
     </p>
   </div>
 
