Adds Rust-ML info, removes the non-working Discord and IRC info

--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@ skip_tiles: [3,9]
       by helping out existing projects or starting new ones.
     </p>
     <p>
-    For help or questions with Rust ML, reach out on <a href='https://discordapp.com/channels/273534239310479360/533004930349531136'>#science-and-ai</a> (Discord) or <a href="/irc/">#rust-machine-learning</a> (IRC).
+    An unofficial Working Group in the machine learning domain has been established <a href='https://github.com/rust-ml'>here</a>.
+
+    For help or questions with Rust ML, feel free to reach out on the <a href='https://rust-ml.zulipchat.com/'>Zulip chat</a>.
     </p>
   </div>
 
