Add SmartCore Getting Started guide.

--- a/index.html
+++ b/index.html
@@ -93,6 +93,10 @@ skip_tiles: []
         <a href="https://github.com/rust-community/rustbridge/tree/master/workshops/src/machine_learning">Spam or Ham?</a> -
         End-to-end Rust ML tutorial aimed at Rust beginners (uses <a href="https://github.com/maciejkula/rustlearn">rustlearn</a>)
       </li>
+      <li>
+        <a href="https://smartcorelib.org/user_guide/quick_start.html">SmartCore Getting Started</a> -
+        Tutorial for using the SmartCore library (<a href="https://github.com/smartcorelib/smartcore">SmartCore</a>)
+      </li>
       <li>...<a href="https://github.com/anowell/are-we-learning-yet/issues/new">suggest additional resources</a> for getting started with ML in Rust</li>
     </ul>
   </div>
