--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <head>
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta http-equiv="Content-Security-Policy" content="default-src 'self'">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <title>Index</title>
