--- a/about/index.html
+++ b/about/index.html
@@ -11,10 +11,10 @@
   <meta name="description" content="The comprehensive guide to the state of machine learning in Rust. This site catalogs ML frameworks, data structures, data cleaning and analysis, and other tools and libraries that are essential to machine learning ecosystems.
 ">
 
-  <link rel="stylesheet" href="http://arewelearningyet.com/css/flexboxgrid.min.css">
-  <link rel="stylesheet" href="http://arewelearningyet.com/css/main.css">
+  <link rel="stylesheet" href="/css/flexboxgrid.min.css">
+  <link rel="stylesheet" href="/css/main.css">
 
-  <link rel="canonical" href="http://arewelearningyet.comabout/">
+  <link rel="canonical" href="https://arewelearningyet.comabout/">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
@@ -29,7 +29,7 @@
   <header class="site-header">
 
   <div class="container">
-    <a class="site-title" href="http://arewelearningyet.com/">
+    <a class="site-title" href="https://arewelearningyet.com/">
       <img src="/images/rust-9000.png" style="vertical-align:middle;">
       Are we learning yet?
     </a>    
