deploy: 52d95be7ac30f377e2c2a51ed260467c2d24503a

--- a/neural-networks/index.html
+++ b/neural-networks/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="/css/flexboxgrid.min.css">
   <link rel="stylesheet" href="/css/main.css">
 
-  <link rel="canonical" href="https://arewelearningyet.composts/neural-networks.html">
+  <link rel="canonical" href="https://arewelearningyet.comneural-networks">
 
   <link rel="apple-touch-icon" sizes="180x180" href="/images/apple-touch-icon.png">
   <link rel="icon" type="image/png" href="/images/favicon-32x32.png" sizes="32x32">
