--- a/clustering/index.html
+++ b/clustering/index.html
@@ -104,7 +104,7 @@ scattered between the crates below.</p>
             [
             <a href="https://crates.io/crates/linfa">crate</a> &middot;
             <a href="https://github.com/rust-ml/linfa">repo</a> &middot;
-            <a href="https://docs.rs/crate/linfa">docs</a>
+            <a href="https://rust-ml.github.io/linfa/">docs</a>
             ]
           </span>
         
@@ -771,7 +771,7 @@ Backed by a generic k-means implementation offered as a standalone library.</p>
       <span style="padding: 15px;"><a class="page-link" href="/about">About</a></span>
     </nav>
 
-    <div style="text-align: center; font-size: small;">Are we learning yet? - Last updated: <a href="https://github.com/anowell/are-we-learning-yet/actions/workflows/pages/pages-build-deployment">2023-04-30</a> </div>
+    <div style="text-align: center; font-size: small;">Are we learning yet? - Last updated: <a href="https://github.com/anowell/are-we-learning-yet/actions/workflows/pages/pages-build-deployment">2023-05-01</a> </div>
 
   </div>
 </footer>
